--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ section
 {
     padding: 100px;
 }
+  
 .banner{
     position: relative;
     min-height: 100vh;
@@ -221,6 +222,7 @@ img{
     text-align: center;
     transition: 0.5s;
 }
+
 .skills .content .skillbx:hover{
     background: #2196f3;
 }
@@ -259,12 +261,59 @@ img{
     z-index: 1;
     transition: 0.1s;
   }
+
   .projects .content .probx img:hover{
-    border: 5px solid black;
+    border: 5px solid #222;
   }
   .projects .content .probx:hover .tooltiptext {
     visibility: visible;
   }
+  .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+  }
+  /* Add Animation */
+@keyframes animatetop {
+    from {top: -300px; opacity: 0}
+    to {top: 0; opacity: 1}
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #888;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: rgb(126, 2, 2);
+    text-decoration: none;
+    cursor: pointer;
+  }  
+
 .contact{
     background: #111;
 }
