--- a/css/style.css
+++ b/css/style.css
@@ -134,16 +134,56 @@ header .logo
 {
     color: #fff;
     font-size: 24px;
-    text-transform: uppercase;
     text-decoration: none;
     font-weight: 700;
-    letter-spacing: 2px;
+    letter-spacing: 3px;
+    position: relative;
 }
+header .logo:hover
+{
+    color: burlywood;
+}
+
 header.sticky .logo{
     color: #111;
+    border: 2px solid black;
+    border-radius: 5px;
+    padding-left: 10px;
+    padding-right: 5px;
 }
+header.sticky .logo:before{
+    content: "RZsWORLD";
+    position: absolute;
+    font-size: 24px;
+    font-weight: 700;
+    letter-spacing: 3px;
+    width: 100%;
+    height: 100%;
+    color: goldenrod;
+    overflow: hidden;
+    animation: animate 6s infinite;
+}
+
+@keyframes animate {
+    0% {
+    width: 2%;
+    }
+    25% {
+    width: 50%;
+    }
+    50% {
+    width: 100%;
+    }
+    75% {
+    width: 40%;
+    }
+    100% {
+    width: 2%;
+    }
+}
+
 header.sticky .logo:hover{
-    color: burlywood;
+    opacity: 0.6;
 }
 header ul{
     position: relative;
@@ -152,8 +192,9 @@ header ul{
 header ul li{
     position: relative;
     list-style: none;
+    font-weight: 500;
 }
-header a:hover{
+header ul li a:hover{
     color:burlywood;
 }
 header ul li a{
